updated css file

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css" type="text/css" />
 </head>
 <body>
     <div class="container">
-        <h1>Arianna Mata Period 4</h1>
+        <div class="jumbotron"><h1>Arianna Mata Period 4</h1></div>
         <h2>My favorite part of Advanced Web</h2>
         <p>My favorite part of Patino is the freedom and real world
    experience. There is no other school that will basically
@@ -27,7 +28,7 @@
         it requires a lot of independent and self reflection.</p>
     </div>
    
-
+    
 </body>
 </html>
 
